manifests/multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  generation: 1
  labels:
    app: backend-multitool
  name: backend-multitool
  namespace: test 
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend-multitool 
  template:
    metadata: 
      labels:
        app: backend-multitool
    spec: 
      containers:
      - image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
        name: backend-multitool
        ports:
        - containerPort: 80
          name: http-port
        - containerPort: 443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi" 
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
