manifests/multitoolservice.yaml
apiVersion: v1
kind: Service 
metadata: 
  labels:
    app: multitoolservice
  name: multitoolservice
  namespace: test 
spec:  
  ports:
  - port: 9002
    protocol: TCP
    targetPort: 80
    name: http-port
  selector:
    app: backend-multitool
