manifests/nginxservice.yaml
apiVersion: v1
kind: Service 
metadata: 
  labels:
    app: nginxservice
  name: nginxservice
  namespace: test 
spec:  
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 80
    name: http-port
  selector:
    app: frontend-nginx
